--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,59 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+*.whl
+
+# 虚拟环境
+venv/
+.venv/
+env/
+ENV/
+
+# 环境变量
+.env
+.env.local
+
+# 系统文件
+.DS_Store
+Thumbs.db
+*.swp
+*~
+
+# IDE
+.vscode/
+.idea/
+*.code-workspace
+
+# Jupyter
+.ipynb_checkpoints/
+*.ipynb_checkpoints
+
+# 数据文件（较大）
+data/raw/
+data/processed/*.json
+data/processed/*.csv
+data/processed/paddle_ocr/
+data/processed/unstructured_ocr/
+
+# 向量数据库
+qdrant_storage/
+
+# 日志
+*.log
+
+# 模型缓存（如果有）
+models/
+.cache/
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
